auditforce/objects/TEMP_Setup_Audit_Trail__c.object
<CustomObject>
    <fields>
        <fullName>Action_Short__c</fullName>
        <label>Action (Short)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_String__c</fullName>
        <label>Date String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delegate_User__c</fullName>
        <label>Delegate User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TEMP_Setup_Audit_Trails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TEMP_Setup Audit Trail</label>
    <nameField>
        <displayFormat>TSAT-{0}</displayFormat>
        <label>TEMP_Setup Audit Trail  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TEMP_Setup Audit Trails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>